# priority-pulse

./: .claudeignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/routes/: health.py  query.py
backend/app/core/: logger.py
backend/app/data_processing/: cleaners.py  labelers.py  labeling_config.py
backend/app/ml/: feature_engineering.py  train_models.py
backend/app/services/: llm_service.py  ml_service.py  rag_service.py  vector_service.py
backend/scripts/: check_artifacts.py  init_db.py  populate_vectors.py  run_data_pipeline.py  train_models.py
backend/tests/: test_feature_engineering.py  test_labelers.py  test_query_api.py
frontend/: nginx.conf  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: AnswerSection.jsx  ComparisonPanel.jsx  OffTopicBanner.jsx  QueryInput.jsx  SourcePanel.jsx  Tooltip.jsx
frontend/src/pages/: DataPage.jsx  HowItWorksPage.jsx  ModelPage.jsx
notebooks/: 00_eda.ipynb
