[project]
name = "priority-pulse"
version = "0.1.0"
description = "Priority Pulse — airline support RAG + ML triage (workspace root)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "google-genai>=1.73.1",
    "loguru>=0.7.3",
    "openai>=2.32.0",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.4.1",
]

[tool.uv.workspace]
members = [
    "backend",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
]
