[project]
name = "backend"
version = "0.1.0"
description = "Priority Pulse backend — FastAPI RAG + ML ticket triage API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.0.0",
    "openai>=2.32.0",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "loguru>=0.7.3",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.12.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.4.1",
    "uvicorn[standard]>=0.46.0",
    "xgboost>=3.2.0",
]

# Use CPU-only PyTorch inside Docker to avoid downloading multi-GB CUDA packages.
# sentence-transformers pulls in torch; without this it installs the GPU build (~2.5 GB).
[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
